src/style.css
:root {
    --accent-color: #a0a3a5;
    --search-color-background: #dde0e4;
    --urgent-color: #f05848;
    --important-color: #ffd14f;
    --low-priority-color: #665c9c;
    --done-color: #4b7944;
    --select-color-background: #000;
    --inbox-color: #3e9ef8;
    --select-color-font: #fff;
    --header-color-background: #fcfaf8;
}

body {
    min-height: 100dvh;
    display: grid;
    overflow: hidden;
    grid-template-areas:
        "header content"
        "header content"
        "header content";
    grid-template-rows: repeat(3, 1fr);
    grid-template-columns: 1fr 3fr;
    font-family: 'Comic Neue', sans-serif;

    & header {
        grid-area: header;
        max-width: 25dvw;
        display: grid;
        align-content: space-between;
        background-color: var(--header-color-background);
    }

    & #content {
        grid-area: content;
        max-width: 80dvw;
    }
}

.nav__container {
    position: relative;
    display: grid;
    padding: 1em 0.8em;
    gap: 32px;

    & ul {
        list-style: none;
        font-size: 1.2rem;
        padding-left: 10px;
        display: grid;
        gap: 8px;
    }

    & ul:not(.main) {
        border-bottom: 1px solid var(--accent-color);
        padding-bottom: 1em;
    }

    & .header__title {
        padding-left: 20px;
    }

}

.main {
    display: grid;
    gap: 16px;

    & li {
        display: flex;
        align-items: center;
        gap: 6px;
        cursor: pointer;
    }

    & .inbox:not(.selected) span {
        color: var(--inbox-color);
    }

    & .today:not(.selected) span {
        color: var(--low-priority-color);
    }

    & .upcoming:not(.selected) span {
        color: var(--important-color);
    }

    & .checklist:not(.selected) span {
        color: var(--done-color);
    }

}

.project {
    position: relative;

    & input {
        display: none;
    }

    &:has(input:not(:checked))>*:not(label, .project__title) {
        display: none;
        animation: rotateMenuBackward 0.2s linear forwards;
        transform-origin: top center;
    }

    &:has(input:checked)> :not(label, .project__title) {
        animation: rotateMenu 0.2s ease-in-out forwards;
        transform-origin: top center;
        cursor: pointer;
    }

    &:has(input:checked) li::before {
        content: '#';
        margin-right: 12px;
    }

    & .project__title {
        display: flex;
        justify-content: space-between;
        gap: 8px;
        padding: 0 0.2em;
    }

    & .add__project {
        display: flex;
        align-items: center;
        gap: 5px;
        border: none;
        background-color: transparent;
        justify-self: end;
        grid-row: 2 / 3;
    }


    & .add__project:has(+li) {
        position: absolute;
    }

    & .mark {
        transition: transform 0.2s ease-out;
    }

    &:has(input:checked) .mark {
        transform: rotate(90deg);
    }

    & li::before {
        color: var(--marker-color, #000);
    }


}

.urgent {
    color: var(--urgent-color);
    background-color: hsl(from var(--urgent-color) h s calc(l + 20));
    padding: 0 0.8em;
    border-radius: 12px;
}

.important {
    color: var(--important-color);
    background-color: hsl(from var(--important-color) h s calc(l + 20));
    padding: 0 0.8em;
    border-radius: 12px;
}

.lowPriority {
    color: var(--low-priority-color);
    background-color: hsl(from var(--low-priority-color) h s calc(l + 20));
    padding: 0 0.8em;
    border-radius: 12px;
}

.done {
    color: var(--done-color);
    background-color: hsl(from var(--done-color) h s calc(l + 20));
    padding: 0 0.8em;
    border-radius: 12px;
}

.inbox__container {
    display: grid;
    padding: 2em;

    & .add__task {
        position: fixed;
        right: 5%;
        bottom: 5%;
        width: 50px;
        height: 50px;
        border-radius: 50%;
        background-color: var(--select-color-background);
        display: grid;
        place-content: center;
        cursor: pointer;

        & span {
            color: var(--header-color-background);
        }
    }

    & .header__meta {
        display: flex;
        justify-content: space-between;
    }

    & .header__meta button {
        background-color: var(--select-color-background);
        color: var(--select-color-font);
        border: none;
        border-radius: 8px;
        font-size: 1.1rem;
        padding: 0.2em 0.8em;
        cursor: pointer;
    }
}

.task__list {
    display: grid;
    align-items: center;
    padding-left: 0;
    gap: 32px;



    & .task {
        display: grid;
        grid-template-columns: 5% 2fr;
        grid-template-rows: 1fr;
        justify-content: start;
        padding-bottom: 1em;
        border-bottom: 2px solid var(--accent-color);
        font-size: 1rem;
        cursor: pointer;
    }

    & .task input[type="checkbox"] {
        grid-area: 2 / 1 / 3 / 2;
        display: grid;
        place-content: center;
        justify-self: center;
        appearance: none;
        background-color: #fff;
        margin: 0;
        font: inherit;
        color: var(--select-color-background);
        width: 2em;
        height: 2em;
        border: 0.15em solid #000;
        border-radius: 24px;
        transform: translateY(-0.075em);
        transition: 120ms background-color ease-in-out;
        cursor: pointer;
    }

    & .task input[type="checkbox"]::before {
        content: " ";
        width: 0.85em;
        height: 0.85em;
        transform: scale(0);
        transition: 120ms transform ease-in-out;
        box-shadow: inset 1em 1em #fff;
        background-color: CanvasText;
        transform-origin: bottom left;
        clip-path: polygon(14% 44%, 0 65%, 50% 100%, 100% 16%, 80% 0%, 43% 62%);
    }

    & .task input[type="checkbox"]:checked::before {
        transform: scale(1);
    }

    & .task input[type="checkbox"]:checked {
        background-color: #000;
    }

    & .task .task__title {
        grid-area: 1 / 2 / 2 / 3;
        display: flex;
        gap: 8px;
    }

    & .task__title>span {
        color: var(--accent-color);
        font-size: 1.2rem;
    }

    & .task .task__desc {
        color: var(--accent-color);
        grid-area: 2 / 2 / 3 / 3;
        white-space: nowrap;
        overflow: hidden;
        text-overflow: ellipsis;
        font-size: 1.1rem;
    }

    & .task .task__meta {
        display: flex;
        grid-area: 3 / 2 / 4 / 3;
        align-items: center;
        gap: 16px;
    }

    & .task .note__container {
        grid-column: 2 / 3;
        display: none;

        & textarea {
            margin: 1em 0;
            resize: none;
            width: 100%;
            min-height: 100px;
            border-radius: 12px;
            border: 1px solid var(--select-color-background);
            padding: 1em;
        }

        & .note__save {
            padding: 0.4em 1em;
            background-color: var(--select-color-background);
            color: var(--header-color-background);
            border: none;
            border-radius: 12px;
            font-size: 1.1rem;
            cursor: pointer;
        }
    }

}

@keyframes rotateMenu {
    from {
        transform: rotateX(-90deg);
    }

    to {
        transform: rotateX(0deg);
    }
}

@keyframes rotateMenuBackward {
    from {
        display: block;
        transform: rotateX(0deg);
    }

    to {
        transform: rotateX(-90deg);
        display: none;
    }
}

